# Android-Recorder

./: .gitignore
app/: .gitignore  CMakeLists.txt  build.gradle
app/src/androidTest/java/com/yeliang/recorder/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: controller.cpp  controller.h  log_utils.h  matrix.cpp  matrix.h
app/src/main/cpp/common/: coomon_utils.h  message_handler.cpp  message_handler.h  message_queue.cpp  message_queue.h  preview_render.cpp  preview_render.h
app/src/main/cpp/egl/: egl_core.cpp  egl_core.h  gl_tools.h
app/src/main/cpp/encoder/: video_encoder_adapter.cpp  video_encoder_adapter.h
app/src/main/cpp/opengl/: gpu_texture_frame.cpp  gpu_texture_frame.h  opengl_render.cpp  opengl_render.h  preview_render.cpp  preview_render.h  texture_frame.cpp  texture_frame.h  yuv_texture_frame.h  yuvtexture_frame.cpp
app/src/main/cpp/texture_copier/: gpu_texture_frame_copier.cpp  gpu_texture_frame_copier.h  texture_frame_copier.cpp  texture_frame_copier.h
app/src/main/java/com/yeliang/recorder/: CameraConfigInfo.java  MainActivity.java  PreviewActivity.java  PreviewScheduler.java  RecorderView.java  VideoCamera.java
app/src/main/jni/: PreviewScheduler.cpp  PreviewScheduler.h
app/src/main/res/layout/: activity_main.xml  activity_preview.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/yeliang/recorder/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
